[gd_scene load_steps=2 format=3 uid="uid://cvuhj617s0g1q"]

[ext_resource type="Script" path="res://ui/split_screen.gd" id="1_6x3o1"]

[node name="SplitScreen" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
script = ExtResource("1_6x3o1")

[node name="TopLayer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0
alignment = 1

[node name="Player1" type="SubViewportContainer" parent="TopLayer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="SubViewport" parent="TopLayer/Player1"]
handle_input_locally = false
size = Vector2i(576, 324)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="Player2" type="SubViewportContainer" parent="TopLayer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="SubViewport" parent="TopLayer/Player2"]
handle_input_locally = false
size = Vector2i(576, 324)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="BottomLayer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0
alignment = 1

[node name="Player3" type="SubViewportContainer" parent="BottomLayer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="SubViewport" parent="BottomLayer/Player3"]
handle_input_locally = false
size = Vector2i(576, 324)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="Player4" type="SubViewportContainer" parent="BottomLayer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="SubViewport" parent="BottomLayer/Player4"]
handle_input_locally = false
size = Vector2i(576, 324)
size_2d_override_stretch = true
render_target_update_mode = 4
